gitops/apps/platform/backstage/base/app/backstage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
  labels:
    owner: platform
    app.kubernetes.io/part-of: platform
    app.kubernetes.io/managed-by: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      serviceAccountName: backstage-service-account
      nodeSelector:
        role: platform
      containers:
        - name: backstage-app
          image: backstage:0.1.1 # This gets renamed in the overlay. Overlay is updated by CI pipeline.
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7007
