gitops/apps/platform/backstage/base/app/backstage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
  labels:
    owner: platform
    app.kubernetes.io/part-of: platform
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    app: backstage
  ports:
    - name: http
      port: 80
      targetPort: http
